syntax = "proto3";

option java_package = "ex.grpc";
option objc_class_prefix = "RTG";

package Bioskynet.Services;

service FileServer
{      	
  rpc Heartbeat    ( EmptyMessage ) returns ( EmptyMessage  ) {}
  rpc SayHello     ( HelloRequest )          returns ( HelloReply ) {}


  rpc GetFile( FileMessage ) returns ( FileBytes ) {}
  rpc CreateFile( FileBytes ) returns ( FileMessage ) {}
  rpc DeleteFile( FileMessage ) returns ( EmptyMessage ) {}
}

message FileMessage{
  string id = 1;
}

message FileBytes{
  bytes data = 1;
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message EmptyMessage{

}